--- a/lang/config_front_processed.json
+++ b/lang/config_front_processed.json
@@ -223,7 +223,7 @@
         "slot_options": []
     },
     "Quiero subscribirme a la lista de email.": {
-        "slot_text": "Si querés sumarte a las listas de correo del Departamento, solicitalo a <a href=\"mailto:mateuba@gmail.com\">mateuba@gmail.com</a>.\n",
+        "slot_text": "Si querés sumarte a las listas de correo del Departamento, solicitalo a <a href=\"mailto:UNLA_Mate@gmail.com\">UNLA_Mate@gmail.com</a>.\n",
         "slot_options": []
     },
     "Recibir novedades": {
@@ -242,11 +242,11 @@
         ]
     },
     "Otros temas": {
-        "slot_text": "Si no pudiste resolver tu consulta, escribí a <a href=\"mailto:mateuba@gmail.com\">mateuba@gmail.com</a>.",
+        "slot_text": "Si no pudiste resolver tu consulta, escribí a <a href=\"mailto:UNLA_Mate@gmail.com\">UNLA_Mate@gmail.com</a>.",
         "slot_options": []
     },
     "start": {
-        "slot_text": "¡Hola! Soy mateUBA_bot, el bot del Departamento de mate de la UBA. ¿En qué puedo ayudarte? \nIngresá uno de las siguientes opciones:",
+        "slot_text": "¡Hola! Soy UNLA_Mate_bot, el bot del Departamento de mate de la UBA. ¿En qué puedo ayudarte? \nIngresá uno de las siguientes opciones:",
         "slot_options": [
             {
                 "slot_id": "start",
